# clang_bcov

./: README.md
bcov/: BranchCov.cpp
fcall/: CMakeLists.txt  FuncCall.cpp
fcov/: CMakeLists.txt  FuncCov.cpp
grep-1.2.0/: CMakeLists.txt  bcov.info  br.c  br.h  generator.py  grep  grep.c  grep_bcov.c  result.txt  run.sh
lcov/: .LineCov.cpp.swp  CMakeLists.txt  LineCov.cpp
power/: CMakeLists.txt  power.c  power_bcov.c  run.sh
ptrfunc/: PtrFunc.cpp
ptrfunc2/: CMakeLists.txt  PtrFunc.cpp
